# sudoku2-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: solver.rs
src/: cell_group.rs  coordinate.rs  default_solver.rs  game.rs  game_cell.rs  game_state.rs  index.rs  lib.rs  state_stack.rs  value.rs
src/example_games/: hypersudoku.rs  mod.rs  nonomino.rs  sudoku.rs  sudoku2.rs  sudoku_xwings.rs
src/strategies/: hidden_singles.rs  hidden_twins.rs  mod.rs  naked_singles.rs  naked_twins.rs  xwing.rs
src/visualization/: ascii.rs  mod.rs
